# PyExcelApp

./: .coveragerc  README.md  globals.py  logging_config.py  main.py  package.json  plugin_template.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: cd.yml  ci.yml  docs.yml
dependency_monitoring_framework/src/: __init__.py  config.json  config.py
docs/: bug_fix_summary.md  dependency_monitoring_framework.md  plugin_dependencies_explanation.md  plugin_manager_dependency_monitoring.md  plugin_system.md  testing.md  workflow.md
models/: table_model.py
plugin_dependencies/: test_plugin_requirements.txt
plugin_manager/: __init__.py  plugin_base.py  plugin_config.py  plugin_docs.py  plugin_error_handler.py  plugin_event.py  plugin_interface.py  plugin_monitor.py  plugin_permissions.json  plugin_permissions.py  plugin_sandbox.py  plugin_system.py  plugin_testing.py  plugin_version.py  plugins_manager_window.py
plugin_manager/config/: .config_key  plugin_permissions.json
plugin_manager/core/: __init__.py  plugin_base.py  plugin_interface.py  (+1 more)
pyexcelapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
response/: notification_mechanism_details.md  project_improvement_directions.txt  project_overview_and_improvements.txt  response.md
scripts/: run_monitoring_tests.sh  run_tests.sh
tests/: __init__.py  conftest.py  test_excel_operations.py
ui/: column_settings_dialog.py  main_window.py  toolbar.py  workbook.py
utils/: common.py  error_handler.py  event_bus.py  excel_operations.py  mouse_operations.py
(+78 files in other folders)
