[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexcel-app"
version = "0.1.0"
description = "Excel处理应用"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "PyQt6>=6.4.0",
    "openpyxl>=3.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 